src/objects/CPA_CR__c.object
<CustomObject>
    <fields>
        <fullName>txt_Title_of_change__c</fullName>
        <description>Title mentioned in the CR</description>
        <label>Title of Change*</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Unilever_Budget_Approver_Name__c</fullName>
        <description>Unilever Budget Approver Name</description>
        <label>Unilever Budget Approver Name*</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Unilever_Content_Approver_Name__c</fullName>
        <description>Unilever Content Approver Name</description>
        <label>Unilever Content Approver Name*</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Unilever_Reference__c</fullName>
        <description>Clarity ID of the project</description>
        <label>Unilever Reference*</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txta_PWORFDelta_Title__c</fullName>
        <label>Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>txta_Reason_for_Return__c</fullName>
        <inlineHelpText>CR Can be returned if status is sent for signature</inlineHelpText>
        <label>Reason for Return</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>txta_Unilever_Project_Name__c</fullName>
        <description>Project name/title</description>
        <label>Unilever Project Name*</label>
        <type>TextArea</type>
    </fields>
    <label>CR</label>
    <listViews>
        <fullName>All_CR</fullName>
        <columns>NAME</columns>
        <columns>txta_PWORFDelta_Title__c</columns>
        <columns>pkl_Status__c</columns>
        <columns>txt_PWODelta_Accenture_Project_Manager__c</columns>
        <columns>CPA_Project_Work_Order__c</columns>
        <columns>PWO_number__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All CR</label>
        <language>en_US</language>
        <sharedTo>
            <group>CAP_SMT_Group</group>
            <group>CAP_ULFT_Group</group>
            <group>CAP_ULPT_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CAP_ULPM_CPA_CR</fullName>
        <filterScope>Queue</filterScope>
        <label>ULPM</label>
        <queue>CAP_ULPM</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CAP_VDM_Queue_CPA_CR</fullName>
        <filterScope>Queue</filterScope>
        <label>VDM</label>
        <queue>CAP_VDM_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CPA_SMT_CPA_CR</fullName>
        <filterScope>Queue</filterScope>
        <label>SMT</label>
        <queue>CPA_SMT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CR_Assigned_to_SMT</fullName>
        <columns>NAME</columns>
        <columns>txta_PWORFDelta_Title__c</columns>
        <columns>pkl_Status__c</columns>
        <columns>txt_PWODelta_Accenture_Project_Manager__c</columns>
        <columns>CPA_Project_Work_Order__c</columns>
        <columns>PWO_number__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <label>CR Assigned to SMT</label>
        <language>en_US</language>
        <queue>CPA_SMT</queue>
        <sharedTo>
            <group>CAP_SMT_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CR_Assigned_to_VDM</fullName>
        <columns>NAME</columns>
        <columns>txta_PWORFDelta_Title__c</columns>
        <columns>pkl_Status__c</columns>
        <columns>txt_PWODelta_Accenture_Project_Manager__c</columns>
        <columns>CPA_Project_Work_Order__c</columns>
        <columns>PWO_number__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <label>CR Assigned to VDM</label>
        <language>en_US</language>
        <queue>CAP_VDM_Queue</queue>
        <sharedTo>
            <group>CAP_SMT_Group</group>
            <group>CAP_VDM_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CR_Created_By_Me</fullName>
        <columns>NAME</columns>
        <columns>txta_PWORFDelta_Title__c</columns>
        <columns>pkl_Status__c</columns>
        <columns>txt_PWODelta_Accenture_Project_Manager__c</columns>
        <columns>CPA_Project_Work_Order__c</columns>
        <columns>PWO_number__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <label>CR Created By Me</label>
        <language>en_US</language>
        <sharedTo>
            <group>CAP_SMT_Group</group>
            <group>CAP_VDM_Group</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Internal CR ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CR</pluralLabel>
    <recordTypes>
        <fullName>CPA_CR_Cancelled</fullName>
        <active>true</active>
        <label>CR Cancelled</label>
    </recordTypes>
    <recordTypes>
        <fullName>CPA_CR_Other</fullName>
        <active>true</active>
        <label>CR Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>CPA_CR_SIgned</fullName>
        <active>true</active>
        <label>CR SIgned</label>
    </recordTypes>
    <recordTypes>
        <fullName>CPA_CR_Submitted</fullName>
        <active>true</active>
        <label>CR Submitted</label>
    </recordTypes>
    <recordTypes>
        <fullName>CPA_Standalone_CR</fullName>
        <active>true</active>
        <label>Standalone CR</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CPA_CR_Cant_be_created</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISNEW() ,RecordType.DeveloperName !=&apos;CPA_Standalone_CR&apos; ,OR( 

ISPICKVAL(CPA_Project_Work_Order__r.pkl_Status__c , &quot;Cancelled&quot;), 
ISPICKVAL(CPA_Project_Work_Order__r.pkl_Status__c , &quot;Terminated&quot;), 
ISPICKVAL(CPA_Project_Work_Order__r.pkl_Status__c , &quot;Sent For Termination&quot;), 
ISPICKVAL(CPA_Project_Work_Order__r.pkl_Status__c , &quot;Closed&quot;),
ISPICKVAL(CPA_Project_Work_Order__r.pkl_Status__c , &quot;Request For Termination&quot;),
ISPICKVAL(CPA_Project_Work_Order__r.pkl_Status__c , &quot;Sent For Closure&quot;)
))</errorConditionFormula>
        <errorMessage>CR cant be created, because PWO is in process of Closer/Termination/Cancellation/ Not Accepted by Supply Management Team</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CPA_CR_NOT_on_PWO_Saved</fullName>
        <active>true</active>
        <description>CPA_CR Can&apos;t be created if the associated  PWO is in SAVED only</description>
        <errorConditionFormula>AND( ISNEW() ,RecordType.DeveloperName !=&apos;CPA_Standalone_CR&apos; ,OR( 
ISPICKVAL(CPA_Project_Work_Order__r.pkl_Status__c , &quot;Saved&quot;)
))</errorConditionFormula>
        <errorMessage>CR cant be created, because associated  PWO is still in Saved Status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CPA_Status_cant_be_chaged</fullName>
        <active>false</active>
        <description>IF PWO is set for Termination then CR status cant be changed</description>
        <errorConditionFormula>OR(
ISPICKVAL(CPA_Project_Work_Order__r.pkl_Status__c , &apos;Sent For Termination&apos;),
ISPICKVAL(CPA_Project_Work_Order__r.pkl_Status__c , &apos;Request For Termination&apos;),
ISPICKVAL(CPA_Project_Work_Order__r.pkl_Status__c , &apos;Terminated&apos;)
)</errorConditionFormula>
        <errorMessage>Associate PWO is in process of Termination, So Operation is cancelled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Specify_Cancellation_Reason</fullName>
        <active>false</active>
        <description>This validation checks if reason for CR cancellation  provided or not.</description>
        <errorConditionFormula>ISPICKVAL( pkl_Status__c , &apos;Cancelled&apos;)</errorConditionFormula>
        <errorDisplayField>ltxta_Reason_for_Cancellation__c</errorDisplayField>
        <errorMessage>You need mention reason for CR cancellation.</errorMessage>
    </validationRules>
</CustomObject>